feat:modifiy component index

--- a/src/global.css
+++ b/src/global.css
@@ -62,3 +62,14 @@ body {
   padding: 0;
   line-height: inherit;
 }
+
+.btn {
+  @apply font-bold py-2 px-4 rounded
+}
+
+.btn_primary {
+  @apply bg-blue-500 text-white
+}
+.btn_primary:hover {
+  @apply bg-blue-700 text-white
+}
