feat:home project;spacex;efrTienda

--- a/src/components/shared/modal/modal.css
+++ b/src/components/shared/modal/modal.css
@@ -24,6 +24,10 @@
   @apply w-5/12 ;
 }
 
+.modal-xl {
+  @apply w-8/12 ;
+}
+
 
 .modal-title {
   @apply text-lg leading-6 font-medium text-gray-900 capitalize;
